--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -29,14 +29,14 @@ jobs:
       - name: Process package ${{ matrix.package.name }}
         run: |
           python3 build/update_manifest.py \
-            --package "${{ matrix.package.name }}" \
-            --repo "${{ matrix.package.repo }}" \
-            --manifest "${{ matrix.package.manifest }}" \
-            --assets "${{ matrix.package.assets }}"
+            --package '${{ matrix.package.name }}' \
+            --repo '${{ matrix.package.repo }}' \
+            --manifest '${{ matrix.package.manifest }}' \
+            --assets '${{ matrix.package.assets }}'
 
       - name: Push changes
         run: |
-          if [ -z "$(git rev-list origin/main..HEAD)" ]; then
+          if [ -z "$(git rev-list origin/main..HEAD --)" ]; then
             echo "No changes to push"
           else
             git push
